Updated all html and css

--- a/about.html
+++ b/about.html
@@ -86,18 +86,21 @@
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/382/original/chocolate-muffins.PNG?1692001963"
             class="img-fluid p-2 shadow rounded"
+            alt="chocolate-muffins project"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/383/original/weather-app.PNG?1692001977"
             class="img-fluid p-2 shadow rounded"
+            alt="Weather project"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/386/original/croissant-app.PNG?1692003364"
             class="img-fluid p-2 shadow rounded"
+            alt="Croissant project"
           />
         </div>
       </div>
