--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/382/original/chocolate-muffins.PNG?1692001963"
             class="img-fluid rounded"
+            alt="chocolate-muffins project"
           />
         </div>
         <div class="col-md-6">
@@ -79,7 +80,8 @@
           <div class="mt-5">
             <a
               href="https://cosmic-nasturtium-81c972.netlify.app/"
-              class="primary-link"
+              class="primary-link project-link"
+              title="chocolate-muffins project"
               >Launch Muffin App</a
             >
           </div>
@@ -96,7 +98,8 @@
           <div class="mb-5 mt-5">
             <a
               href="https://playful-pothos-94b311.netlify.app/"
-              class="primary-link"
+              class="primary-link project-link"
+              title="Weather project"
               >Launch Weather App</a
             >
           </div>
@@ -105,6 +108,7 @@
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/383/original/weather-app.PNG?1692001977"
             class="img-fluid rounded"
+            alt="Weather project"
           />
         </div>
       </div>
@@ -113,6 +117,7 @@
           <img
             src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/386/original/croissant-app.PNG?1692003364"
             class="img-fluid rounded"
+            alt="Croissant project"
           />
         </div>
         <div class="col-md-6">
@@ -125,7 +130,8 @@
           <div class="mt-5">
             <a
               href="https://classy-alpaca-6d0cd0.netlify.app/"
-              class="primary-link"
+              class="primary-link project-link"
+              title="Croissant project"
               >Launch Croissant App</a
             >
           </div>
